Version 2.04  2010-11-13
 * tracker server ip can NOT be 127.0.0.1
 * do not catch signal SIGABRT
 * strerror change to STRERROR macro

Version 2.03  2010-11-08
 * bug fixed: core dump when http.need_find_content_type=false and 
   http.anti_steal.check_token=true
 * storage server add join_time field (create timestamp of this storage)
 * tracker server fetch system files from other tracker server when 
   first storage server join in (tracker to tracker sync system files)
 * tracker server changes the old ip address to the new address when the 
   storage server ip address changed
 * tracker to tracker sync system data files in some case, multi tracker
   server supported well

Version 2.02  2010-10-28
 * get parameters function from tracker server changed, 
   add paramter: storage_sync_file_max_delay
 * local ip functions move to common/local_ip_func.c
 * when query all storage servers to store, do not increase the current
   write server index
 * struct FDFSHTTPParams add field: need_find_content_type
 * symbol link client library to /usr/lib64 in 64 bits OS
 * storage_client.c: deal file extension name correctly

Version 2.01  2010-10-17
 * client/fdfs_monitor.c can specify tracker server
 * micro STORAGE_STORE_PATH_PREFIX_CHAR change to 
   FDFS_STORAGE_STORE_PATH_PREFIX_CHAR
 * php extension can set log filename
 * php extension add function: fastdfs_client_version
 * bug fixed: client/tracker_client.c tracker_get_connection_ex NULL pointer
 * set max core dump file size to at least 256MB when DEBUG_FLAG is on, 
   make sure to generate core file when core dump with DEBUG_FLAG on
 * upload file can get available storage server list of the group, 
   add command TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITHOUT_GROUP_ALL and
   TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITH_GROUP_ALL
 * bug fixed: storage core dump in some case

Version 2.00  2010-08-22
 * tracker network io use libevent instead of traditional io model