@@ -2,6 +2,8 @@ Version 2.04  2010-11-13
  * tracker server ip can NOT be 127.0.0.1
  * do not catch signal SIGABRT
  * strerror change to STRERROR macro
+ * sync copy file use temp filename first, rename to the correct filename 
+   when sync done
 
 Version 2.03  2010-11-08
  * bug fixed: core dump when http.need_find_content_type=false and 
